dump/src/reader/compat/snapshots/dump__reader__compat__v2_to_v3__test__compat_v2_v3-9.snap
---
source: dump/src/reader/compat/v2_to_v3.rs
expression: movies2.settings()
---
Ok(
    Settings {
        displayed_attributes: Reset,
        searchable_attributes: Reset,
        filterable_attributes: Set(
            {},
        ),
        sortable_attributes: NotSet,
        ranking_rules: Set(
            [
                "words",
                "typo",
                "proximity",
                "attribute",
                "exactness",
            ],
        ),
        stop_words: Set(
            {},
        ),
        synonyms: Set(
            {},
        ),
        distinct_attribute: Reset,
        _kind: PhantomData<dump::reader::v3::settings::Checked>,
    },
)
